--- a/Assignment 6/assignment6-style.css
+++ b/Assignment 6/assignment6-style.css
@@ -1,9 +1,8 @@
-@import url("https://use.typekit.net/yco1zqh.css");
+@import url('https://fonts.googleapis.com/css2?family=Pragati+Narrow:wght@700&display=swap');
 
 .navigation{
-  align-items:flex-start;
-  flex-wrap: nowrap;
-  background-color: green;
+  display:flex;
+  align-items: center;
 }
 
 .navigation a{
@@ -13,24 +12,32 @@
   text-decoration: none;
   font-size: 17px;
 }
+hr {
+  margin-left: auto;
+  margin-right: auto;
+  border-style: inset;
+}
 body{
-  background-color: black;
+  background-color: #0D0D0D;
 }
 h1{
   color: white;
-  font-family: all-round-gothic, sans-serif;
+  font-family: 'Pragati Narrow', sans-serif;
   font-weight: 700;
   font-style: normal;
 }
 a{
   color: lightgray;
-  font-family: all-round-gothic, sans-serif;
+  font-family: 'Pragati Narrow', sans-serif;
   font-weight: 400;
   font-style: normal;
 }
+a:hover {
+  color: #F2E529;
+}
 p{
-  color:white;
-  font-family: all-round-gothic, sans-serif;
+  color:black;
+  font-family: 'Pragati Narrow', sans-serif;
   font-weight: 400;
   font-style: normal;
 }
