--- a/Assignment 6/assignment6-style.css
+++ b/Assignment 6/assignment6-style.css
@@ -20,23 +20,24 @@ hr {
 body{
   background-color: #0D0D0D;
 }
-h1{
+h1, h2{
   color: white;
   font-family: 'Pragati Narrow', sans-serif;
   font-weight: 700;
   font-style: normal;
 }
 a{
-  color: lightgray;
+  color: white;
   font-family: 'Pragati Narrow', sans-serif;
   font-weight: 400;
   font-style: normal;
 }
 a:hover {
   color: #F2E529;
+  text-decoration: line-through;
 }
 p{
-  color:black;
+  color: white;
   font-family: 'Pragati Narrow', sans-serif;
   font-weight: 400;
   font-style: normal;
