--- a/Assignment 6/assignment6-style.css
+++ b/Assignment 6/assignment6-style.css
@@ -1,8 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Pragati+Narrow:wght@700&display=swap');
-
+.image {
+  max-width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+*{
+  margin:0;
+  padding: 0;
+}
 .navigation{
-  display:flex;
-  align-items: center;
+  margin: 10px auto;
+  text-align: center;
 }
 
 .navigation a{
@@ -11,6 +19,7 @@
   padding: 20px 20px;
   text-decoration: none;
   font-size: 17px;
+  text-transform: uppercase;
 }
 hr {
   margin-left: auto;
@@ -32,6 +41,7 @@ a{
   font-weight: 400;
   font-style: normal;
 }
+
 a:hover {
   color: #F2E529;
   text-decoration: line-through;
