--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,72 +1,99 @@
-@import url('https://fonts.googleapis.com/css2?family=Pragati+Narrow:wght@700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Pragati+Narrow:wght@400;700&display=swap');
-.image {
-  background-image:url(/img/mainIMG.jpeg);
-  padding: 200px 100px;
-  margin: 0;
-  background-repeat:no-repeat;
-  background-size: cover;
-}
-.image h1{
-  color: #F2E529;
-  text-align: left;
-  font-size: 500%;
-}
-.bottomright {
-  position: absolute;
-  top: 175px;
-  right: 10px;
-}
-
 *{
-  margin:0;
+  margin: 0;
   padding: 0;
+  font-family: arial;
 }
-.navigation{
-  margin: 10px auto;
-  text-align: center;
+.container {
+  width: 100%;
+  min-height: none;
+  padding-left: 8%;
+  padding-right: 8%;
+  box-sizing: border-box;
+  overflow: hidden;
+
 }
 
-.navigation a{
-  color: #f2f2f2;
-  text-align: center;
-  padding: 20px 20px;
+.navbar{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  margin-top: 10px;
+  color: black;
+
+}
+.icon{
+  width: 25px;
+  cursor: pointer;
+  display: none;
+}
+nav{
+  flex: 1;
+  text-align: right;
+}
+nav ul li{
+  display: inline-block;
+  margin-right: 30px;
+  list-style: none;
+}
+nav ul li a{
   text-decoration: none;
-  font-size: 17px;
-  text-transform: uppercase;
+  color: black;
+  font-size: 16px;
 }
-.navigation .active {
-  color:#F2E529;
+nav ul li a:hover{
+  color: yellow;
 }
-hr {
-  margin-left: auto;
-  margin-right: auto;
-  border-style: inset;
+.flexbox-container{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+
 }
-body{
-  background-color: #0D0D0D;
+.flexbox-item{
+  margin: 10px;
+  border: 3px solid #333;
+  background-color: #dfdfdf;
 }
-h1, h2{
-  color: white;
-  font-family: 'Pragati Narrow', sans-serif;
-  font-weight: 700;
-  font-style: normal;
+.flexbox-item-1{
+  width:200px;
+  min-height:200px;
 }
-a{
-  color: white;
-  font-family: 'Pragati Narrow', sans-serif;
-  font-weight: 400;
-  font-style: normal;
+.flexbox-item-2{
+  width:400px;
+  min-height:200px;
+  flex-shrink: 0;
 }
 
-a:hover {
-  color: #F2E529;
-  text-decoration: line-through;
-}
+@media only screen and (max-width: 700px){
+  .flexbox-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .flexbox-item-2{
+    flex-wrap: nowrap;
+  }
+  nav ul{
+    width: 100%;
+    background-color: green;
+    position: absolute;
+    top: 75px;
+    right; 0;
+    z-index: 2;
+  }
+  nav ul li{
+    display: block;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+  .icon{
+    display: block;
+  }
+  #menuList{
+    overflow: hidden;
+    transition: 0.5s;
 
-p{
-  color: white;
-  font-family: 'Pragati Narrow', sans-serif;
-  font-weight: 400;
-  font-style: normal;
+  }
 }
