--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,71 +1,130 @@
+/* Responsive navbar inspiration from Web Dev simplified. https://www.youtube.com/watch?v=At4B7A4GOPg */
+@import url('https://fonts.googleapis.com/css2?family=Pragati+Narrow:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Pragati+Narrow:wght@400;700&display=swap');
+
 *{
+  box-sizing: border-box;
+  font-family: 'Pragati Narrow', sans-serif;
+}
+p {
+  font-size: 16;
+}
+body{
   margin: 0;
   padding: 0;
-  font-family: arial;
 }
-.container {
-  width: 100%;
-  min-height: none;
-  padding-left: 8%;
-  padding-right: 8%;
-  box-sizing: border-box;
-  overflow: hidden;
-
-}
-
 .navbar{
-  width: 100%;
   display: flex;
+  justify-content: space-between;
   align-items: center;
-  margin-top: 10px;
-  color: black;
-
+  background-color: #0D0D0D;
+  color: white;
 }
-.icon{
-  width: 25px;
-  cursor: pointer;
-  display: none;
+.portfolio-title{
+  font-weight: 700;
+  font-size: 1.5rem;
+  margin: .6rem;
 }
-nav{
-  flex: 1;
-  text-align: right;
+.navlinks ul{
+  margin: 0;
+  padding: 0;
+  display: flex;
 }
-nav ul li{
-  display: inline-block;
-  margin-right: 30px;
+.navlinks ul li{
   list-style: none;
 }
-nav ul li a{
+.navlinks li a{
   text-decoration: none;
-  color: black;
-  font-size: 16px;
+  padding: 1rem;
+  display: block;
+  color: white;
 }
-nav ul li a:hover{
-  color: yellow;
+.toggel{
+  position: absolute;
+  top: .75rem;
+  right: 1rem;
+  display: none;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 30px;
+  height: 20px;
+}
+.toggel .bar{
+  height: 3px;
+  width: 100%;
+  background-color: white;
+  border-radius: 10px;
+
+}
+.navlinks li:hover {
+  background-color: #D9CC1E;
+}
+.navbar li a:hover {
+  color: #0D0D0D;
 }
 .flexbox-container{
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  margin-top: 3rem;
 
 }
 .flexbox-item{
   margin: 10px;
-  border: 3px solid #333;
-  background-color: #dfdfdf;
+  /* background-image:url(/img/headshot.png); */
 }
 .flexbox-item-1{
+  flex-shrink: 0;
   width:200px;
   min-height:200px;
+  border: 2px solid #0D0D0D;
+  text-align: center;
+  padding: 1rem;
 }
 .flexbox-item-2{
   width:400px;
-  min-height:200px;
+  /* min-height:200px; */
   flex-shrink: 0;
 }
-
-@media only screen and (max-width: 700px){
+@media only screen and (max-width: 1900px){
+  /* .flexbox-container{
+    flex-wrap: nowrap;
+  } */
+  .flexbox-item-1{
+    width:225px;
+    min-height:225px;
+  }
+  .flexbox-item-2{
+      flex-shrink: 3;
+    width:500px;
+}
+/* I used the value 700 for all my tests because I coulnt shrink my window to 400. */
+@media only screen and (max-width: 400px){
+  .toggel{
+    display: flex;
+  }
+  .navlinks{
+    /* display: none; */
+    width:100%;
+  }
+  .navbar{
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .navlinks ul{
+    width:100%;
+    flex-direction: column;
+  }
+  .navlinks li {
+    text-align: center;
+  }
+  .navlinks li a{
+    padding: .5rem 1rem;
+  }
+  .navlinks.active{
+    display: inline;
+  }
   .flexbox-container{
     display: flex;
     flex-direction: column;
@@ -73,27 +132,6 @@ nav ul li a:hover{
     align-items: center;
   }
   .flexbox-item-2{
-    flex-wrap: nowrap;
-  }
-  nav ul{
-    width: 100%;
-    background-color: green;
-    position: absolute;
-    top: 75px;
-    right; 0;
-    z-index: 2;
-  }
-  nav ul li{
-    display: block;
-    margin-top: 10px;
-    margin-bottom: 10px;
-  }
-  .icon{
-    display: block;
-  }
-  #menuList{
-    overflow: hidden;
-    transition: 0.5s;
-
+    flex-shrink: 3;
   }
 }
