--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -20,6 +20,9 @@ body{
   background-color: #0D0D0D;
   color: white;
 }
+.navlinks .activeLink{
+  color: #D9CC1E;
+}
 .portfolio-title{
   font-weight: 700;
   font-size: 1.5rem;
@@ -87,6 +90,33 @@ body{
   /* min-height:200px; */
   flex-shrink: 0;
 }
+/* Project page responsive image grid */
+.row{
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 4px;
+  justify-content: center;
+  align-self: center;
+}
+.column {
+  flex: 25%;
+  max-width: 25%;
+  padding: 0 4px;
+}
+
+.column .griditem {
+  margin-top: 8px;
+  vertical-align: middle;
+}
+
+.grid-item{
+  flex-shrink: 0;
+  width:200px;
+  min-height:200px;
+  border: 2px solid #0D0D0D;
+  text-align: center;
+  padding: 1rem;
+}
 @media only screen and (max-width: 1900px){
   /* .flexbox-container{
     flex-wrap: nowrap;
@@ -99,10 +129,12 @@ body{
       flex-shrink: 3;
     width:500px;
 }
-/* I used the value 700 for all my tests because I coulnt shrink my window to 400. */
-@media only screen and (max-width: 400px){
+@media only screen and (max-width: 700px){
   .toggel{
     display: flex;
+  }
+  .navlinks .activeLink{
+    color: white;
   }
   .navlinks{
     /* display: none; */
