--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,4 +1,5 @@
 /* Responsive navbar inspiration from Web Dev simplified. https://www.youtube.com/watch?v=At4B7A4GOPg */
+/* annimated project grid inspiration: https://codepen.io/kachibito/pen/wpWEWb */
 @import url('https://fonts.googleapis.com/css2?family=Pragati+Narrow:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Pragati+Narrow:wght@400;700&display=swap');
 
@@ -92,35 +93,114 @@ body{
 }
 /* Project page responsive image grid */
 .row{
-  display: flex;
-  flex-wrap: wrap;
-  padding: 0 4px;
-  justify-content: center;
-  align-self: center;
+  margin: auto;
+  padding: 5rem;
+  display: grid;
+  grid-template-columns: repeat(3, minmax(200px, 1fr));
+  grid-gap: 1rem;
+  max-width: 1250px;
 }
-.column {
-  flex: 25%;
-  max-width: 25%;
-  padding: 0 4px;
 }
-
-.column .griditem {
-  margin-top: 8px;
-  vertical-align: middle;
-}
-
-.grid-item{
-  flex-shrink: 0;
-  width:200px;
-  min-height:200px;
-  border: 2px solid #0D0D0D;
+/* annimation */
+.tiles {
+  font-size: 0;
   text-align: center;
-  padding: 1rem;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  background: black;
 }
+.tiles .tile {
+  display: block;
+  margin: 10px;
+  text-align: left;
+  opacity: .99;
+  overflow: hidden;
+  /* position: relative; */
+  border-radius: 3px;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.05);
+  background-color: red;
+  width: 100%;
+  padding-top: 100%; /* 1:1 Aspect Ratio */
+  position: relative;
+}
+.tiles .tile:before {
+  content: '';
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.7) 70%);
+  width: 100%;
+  height: 50%;
+  opacity: 0;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  z-index: 2;
+  transition-property: top, opacity;
+  transition-duration: 0.3s;
+  display: block;
+}
+.tiles .tile img {
+  display: block;
+  max-height: 100%;
+  backface-visibility: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin: auto;
+  bottom: 0;
+}
+.tiles .tile .details {
+  font-size: 16px;
+  padding: 20px;
+  color: #fff;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: 3;
+}
+.tiles .tile .details span {
+  display: block;
+  opacity: 0;
+  position: relative;
+  top: 100px;
+  transition-property: top, opacity;
+  transition-duration: 0.3s;
+  transition-delay: 0s;
+}
+.tiles .tile .details .title {
+  line-height: 1;
+  font-weight: 600;
+  font-size: 18px;
+}
+.tiles .tile .details .info {
+  line-height: 1.2;
+  margin-top: 5px;
+  font-size: 12px;
+}
+.tiles .tile:focus:before,
+.tiles .tile:focus span,
+.tiles .tile:hover:before,
+.tiles .tile:hover span {
+  opacity: 100;
+}
+.tiles .tile:focus:before,
+.tiles .tile:hover:before {
+  top: 50%;
+}
+.tiles .tile:focus span,
+.tiles .tile:hover span {
+  top: 0;
+}
+.tiles .tile:focus .title,
+.tiles .tile:hover .title {
+          transition-delay: 0.15s;
+}
+.tiles .tile:focus .info,
+.tiles .tile:hover .info {
+          transition-delay: 0.25s;
+}
+
+
 @media only screen and (max-width: 1900px){
-  /* .flexbox-container{
-    flex-wrap: nowrap;
-  } */
   .flexbox-item-1{
     width:225px;
     min-height:225px;
@@ -128,8 +208,39 @@ body{
   .flexbox-item-2{
       flex-shrink: 3;
     width:500px;
+  }
 }
 @media only screen and (max-width: 700px){
+  .row{
+    margin: auto;
+    padding: 2rem;
+    display: grid;
+    grid-template-columns: repeat(1, minmax(200px, 1fr));
+    grid-gap: 1rem;
+    max-width: 500px;
+  }
+  .tiles .tile .details span{
+    top: 0px;
+    opacity: 100%
+  }
+  .tiles .tile:before,
+  .tiles .tile span,
+  .tiles .tile:before,
+  .tiles .tile span {
+    opacity: 100;
+  }
+  .tiles .tile:before,
+  .tiles .tile:before {
+    top: 50%;
+  }
+  .tiles .tile span,
+  .tiles .tile span {
+    top: 0;
+  }
+  .tiles .tile img {
+    max-height: 100%
+  }
+
   .toggel{
     display: flex;
   }
