--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -312,3 +312,17 @@ body{
     width: 350px;
   }
 }
+/* Below is custom CSS for Assignment 11 */
+
+.A11{
+  margin-left:50px;
+}
+
+.colorBtn{
+  width: 100px;
+  background-color: #D9CC1E;
+  position: relative;
+  text-align: center;
+  align-items: center;
+
+}
