--- a/CSS/finalStyles.css
+++ b/CSS/finalStyles.css
@@ -1,25 +1,95 @@
+@import url('https://fonts.googleapis.com/cs2?family=Pragati+Narrow:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Pragati+Narrow:wght@400;700&display=swap');
 *{
-  font-family: 'Pragati Narrow', sans-serif;
+  font-family: 'Pragati', sans-serif;
+  box-sizing: border-box;
 }
+
 body {
+
   display: flex;
-  justify-content: center;
-  align-items: center;
+  flex-direction: column;
+  /* justify-content: center; */
+  /* align-items: center; */
   height: 100vh;
   margin: 0;
+  padding: 0;
   background: #D9D9D9;
   font-size: 120%;
 }
 
+.navbar {
+    display: flex;
+    position: relative;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #262626;
+    color: white;
+    font-family: 'Pragati Narrow', sans-serif;
+}
+
+
+.navlinks {
+    height: 100%;
+}
+
+.navlinks ul {
+    display: flex;
+    margin: 0;
+    padding: 0;
+    margin-right: 1.5em
+}
+
+.navlinks li {
+    list-style: none;
+}
+
+.navlinks li a {
+    display: block;
+    text-decoration: none;
+    color: white;
+    padding: 1rem;
+}
+
+.navlinks li:hover {
+    background-color: #8C8C8C;
+}
+
+.toggle {
+    position: absolute;
+    top: .75rem;
+    right: 1rem;
+    display: none;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 30px;
+    height: 21px;
+}
+
+.toggle .bar {
+    height: 3px;
+    width: 100%;
+    background-color: white;
+    border-radius: 10px;
+}
+
+.portfolio-title{
+  font-weight: 700;
+  font-size: 160%;
+  padding-left: 1.5em;
+}
+
 .display {
+margin: auto;
   background: #0D0D0D;
   color: white;
-  padding: 2em;
+  padding: 1.5em;
   border-radius: 30px;
   width: 100%;
   max-width: 420px;
-  margin: 1em;
+  height: 100%;
+  max-height: 420px;
+
 }
 
 .search {
@@ -66,7 +136,7 @@ body {
   border-top-right-radius: 30px;
   border-bottom-right-radius: 30px;
 }
-.day-btn button:not(:last-child) {
+.day-btn .btns:not(:last-child) {
   border-right: none; /* Prevent double borders */
 }
 
@@ -90,7 +160,7 @@ input.search-bar {
   width: calc(100% - 100px);
 }
 
- button:hover {
+ .activeBtn, button:hover {
   background: #8C8C8C;
 }
 
@@ -122,4 +192,37 @@ h1.temp {
   position: absolute;
   top: 0;
   left: 20px;
+}
+@media (max-width: 800px) {
+    .navbar {
+        flex-direction: column;
+        align-items: flex-start;
+        min-width:100%;
+    }
+
+    .toggle {
+        display: flex;
+    }
+
+    .navlinks {
+        display: none;
+        width: 100%;
+    }
+
+    .navlinks ul {
+        width: 100%;
+        flex-direction: column;
+    }
+
+    .navlinks ul li {
+        text-align: center;
+    }
+
+    .navlinks ul li a {
+        padding: .5rem 1rem;
+    }
+
+    .navlinks.active {
+        display: flex;
+    }
 }
